# stroma-tobiko-poc

./: .env.sample  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  sample.env  values.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/workflows/: hybrid_runners.yaml  runner-keep-alive.yml  sqlmesh-deploy.yml  sqlmesh.yml  tcloud_cicd.yaml
docs/: Medallion-Archiecture.md  Sqlmeshworkflow.md  github-workflows.md  index.md  sqlmesh-cicd.md
ignored/: gold__drug_era.sql  silver__drug_era.sql
ignored/temporary_models/: temp__observation_dates.sql
sqlmeshrunner/: sqlmesh_runner.ipynb  sqlmesh_runner.py
stroma/: .env.example  README.md  config.py  config.yaml  requirements.txt  settings.py  tcloud.yaml
stroma/.github/workflows/: hybrid_runners.yaml  tcloud_cicd.yaml
stroma/macros/: __init__.py  condition_era.py  dqd.py  era.py  observation_period.py
stroma/macros/sql/: condition_era.sql  drug_era.sql
stroma/models/: dummy_model.sql
stroma/models/aereus/: README.md  bronze__care_site.sql  bronze__cdm_source.sql  bronze__condition_occurrence.sql  bronze__cost.sql  bronze__death.sql  bronze__device_exposure.sql  bronze__drug_era.sql  bronze__drug_exposure.sql  bronze__drug_strength.sql  bronze__episode.sql  bronze__episode_event.sql  bronze__fact_relationship.sql  bronze__location.sql  bronze__measurement.sql  bronze__note.sql  bronze__note_nlp.sql  bronze__observation.sql  bronze__payer_plan_period.sql  bronze__person.sql  bronze__procedure_occurrence.sql  bronze__provider.sql  bronze__specimen.sql  bronze__visit_detail.sql  bronze__visit_occurrence.sql
stroma/models/argentum/: silver__care_site.sql  silver__cdm_source.sql  silver__condition_occurrence.sql  silver__cost.sql  silver__death.sql  silver__device_exposure.sql  silver__drug_era.sql  silver__drug_exposure.sql  silver__drug_strength.sql  silver__episode.sql  silver__episode_event.sql  silver__fact_relationship.sql  silver__location.sql  silver__measurement.sql  silver__note.sql  silver__note_nlp.sql  silver__observation.sql  silver__payer_plan_period.sql  silver__person.sql  silver__procedure_occurrence.sql  silver__provider.sql  silver__specimen.sql  silver__visit_detail.sql  silver__visit_occurrence.sql
stroma/models/aurum/: gold__care_site.sql  gold__cdm_source.sql  gold__condition_occurrence.sql  gold__cost.sql  gold__death.sql  gold__device_exposure.sql  gold__dose_era.sql  gold__drug_era.sql  gold__drug_exposure.sql  gold__drug_strength.sql  gold__episode.sql  gold__episode_event.sql  gold__fact_relationship.sql  gold__location.sql  gold__measurement.sql  gold__note.sql  gold__note_nlp.sql  gold__observation.sql  gold__payer_plan_period.sql  gold__person.sql  gold__procedure_occurrence.sql  gold__provider.sql  gold__specimen.sql  gold__visit_detail.sql  (+1 more)
(+231 files in other folders)
