[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stroma"
description = "Scalable Transpiling Reproducible OMOP Medallion Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "vvcb" }]
dependencies = [
    "pydantic-settings",
    "python-dotenv",
    "graphviz",
    "sqlmesh[web,github]",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["stroma"]

[tool.setuptools.dynamic]
version = { attr = "stroma.__version__" }

[project.urls]
Homepage = "https://github.com/lsc-sde/stroma"
# Documentation = "https://lsc-sde.github.io/stroma/"

[project.optional-dependencies]

mssql = ["sqlmesh[mssql]"]

databricks = ["sqlmesh[databricks,postgres]"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.12.2",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]
