[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stroma"
description = "Scalable Transpiling Reproducible OMOP Medallion Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "vvcb" }]
dependencies = [
    "pip>=25.0.1",
    "python-dotenv",
    "tcloud>=2.9.2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["stroma"]

[tool.setuptools.dynamic]
version = { attr = "stroma.__version__" }

[project.urls]
Homepage = "https://github.com/lsc-sde/stroma"
# Documentation = "https://lsc-sde.github.io/stroma/"

[project.optional-dependencies]


[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.12.2",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]
